src/objects/Custom_Labels__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This is to provide custom names for field labels and section labels</description>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <label>Page Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Section_Label__c</fullName>
        <label>Section Label</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Custom Labels</label>
</CustomObject>